--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -55,6 +55,16 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+h1 { 
+    display: block;
+    font-size: 2em;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+}
+
 footer {
   position: absolute;
   bottom: 0;
