--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -48,6 +48,7 @@
 html {
   position: relative;
   min-height: 100%;
+  
 }
 
 body {
@@ -57,12 +58,21 @@ body {
 
 h1 { 
     display: block;
-    font-size: 2em;
+    font-size: 5em;
     margin-top: 0.67em;
     margin-bottom: 0.67em;
     margin-left: 0;
     margin-right: 0;
     font-weight: bold;
+    text-align: center;
+}
+
+nav {
+    display: block;
+    font-size: 2em;
+    margin-bottom: 2em;
+    font-weight: bold;
+    text-align: center;
 }
 
 footer {
