--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -117,6 +117,14 @@ li a:hover:not(.active) {
     color: white;
 }
 
+p {
+    text-align: left;
+    font-size: 2em;
+    /*text-indent: 50px;*/
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
 footer {
   position: absolute;
   bottom: 0;
