revise the size of the panel

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -422,6 +422,7 @@ footer .thumb-md {
   color: #333;
   font-weight: 700;
   border-color: #edf2f2;
+  text-align: center;
 }
 
 .dropdown-submenu.pull-left {
