revise font size of panel

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -420,6 +420,7 @@ footer .thumb-md {
 
 .panel-default > .panel-heading {
   color: #333;
+  font-size: 2em;
   font-weight: 700;
   border-color: #edf2f2;
   text-align: center;
