--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -341,6 +341,7 @@ footer .thumb-md {
   font-size: 1em;
   border-radius: 2px;
   outline: 0 !important;
+  margin-right: 10px;
 }
 
 .btn-addon i {
