add select box to label page.

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -125,6 +125,13 @@ p {
     margin-bottom: 1em;
 }
 
+select {
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+  margin-left: 0.67em;
+  width: 10em;
+}
+
 footer {
   position: absolute;
   bottom: 0;
