revise the appearance of label page

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -128,8 +128,20 @@ p {
 select {
   margin-top: 0.67em;
   margin-bottom: 0.67em;
-  margin-left: 0.67em;
+  
   width: 10em;
+}
+
+img {
+  margin-top: 1em;
+  margin-left: 1em;
+}
+
+canvas {
+  display: block;
+  border-style: solid;
+  border-width: 5px;
+  margin-left: 1em;
 }
 
 footer {
