add select to explore page and revise the appearance

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -361,6 +361,7 @@ footer .thumb-md {
   border-radius: 2px;
   outline: 0 !important;
   margin-right: 10px;
+  margin-top: 0.3em;
 }
 
 .btn-addon i {
