--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -144,6 +144,11 @@ canvas {
   margin-left: 1em;
 }
 
+label {
+  font-size: 1.2em;
+  margin-left: 0.5em;
+}
+
 footer {
   position: absolute;
   bottom: 0;
