--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -126,9 +126,9 @@ p {
 }
 
 select {
+  display: block;
   margin-top: 0.67em;
   margin-bottom: 0.67em;
-  
   width: 10em;
 }
 
@@ -137,10 +137,18 @@ img {
   margin-left: 1em;
 }
 
-canvas {
+#labelCanvas {
   border-style: solid;
   border-width: 5px;
+  position: relative;
+  left: 20%;
+}
+
+#drawCanvas {
+  border-style: solid;
+  border-width: 2px;
   margin-left: 1em;
+  margin-top: 1em;
 }
 
 label {
