--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -135,6 +135,8 @@ select {
 img {
   margin-top: 1em;
   margin-left: 1em;
+  border-style: solid;
+  border-width: 2px;
 }
 
 #labelCanvas {
@@ -147,9 +149,13 @@ img {
 #drawCanvas {
   border-style: solid;
   border-width: 2px;
-  margin-left: 1em;
-  margin-top: 1em;
+  margin-left: 0.6em;
+  margin-top: 0.4em;
 }
+
+#rightButton {
+  float: right;
+} 
 
 label {
   font-size: 1.2em;
