revise the appearance of the button

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -162,6 +162,12 @@ img {
   float: right;
 } 
 
+#prevNext {
+  position: relative;
+  left: 42%;
+
+}
+
 label {
   font-size: 1.2em;
   margin-left: 0.5em;
